--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -5,12 +5,23 @@ on:
   schedule:
     - cron: "*/2 * * * *"   # cada 2 minutos (UTC)
 
+# 🔑 Dale permisos de escritura al token en este workflow
+permissions:
+  contents: write
+
 jobs:
   run:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          # aseguramos que use nuestro token para push
+          token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Re-auth remote with token
+        run: |
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -27,7 +38,7 @@ jobs:
             git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
             git add docs/latest.json
             git commit -m "chore: update latest.json [skip ci]"
-            git push
+            git push origin HEAD:main
           else
             echo "No changes to commit."
           fi
