--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -3,7 +3,7 @@ name: scrape-lidom
 on:
   workflow_dispatch: {}
   schedule:
-    - cron: "*/2 * * * *"
+    - cron: "*/2 * * * *"   # cada 2 minutos
 
 permissions:
   contents: write
@@ -15,6 +15,9 @@ concurrency:
 env:
   TZ: America/Santo_Domingo
   SOURCE_HOME: https://pelotainvernal.com/
+  LEAGUE_SEO: dominicana-lidom
+  FETCH_DETAILS: "false"          # pon "true" si quieres abrir /<id> (costo en requests)
+  DETAILS_LIMIT: "20"
 
 jobs:
   run:
@@ -31,7 +34,7 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: '20'   # 👈 sin cache
+          node-version: '20'   # sin cache -> no exige lockfile
 
       - name: Run scraper
         run: node scraper.mjs
