Add cheerio dependency to package.json

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "engines": { "node": ">=20" },
   "dependencies": {
-    "ws": "^8"
+    "ws": "^8",
+    "cheerio": "^1.0.0"
   }
 }
