--- a/.github/workflows/lidom-players.yml
+++ b/.github/workflows/lidom-players.yml
@@ -1,4 +1,3 @@
-# .github/workflows/lidom-players.yml
 name: scrape-lidom-players
 
 on:
@@ -26,14 +25,16 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-        with: { token: ${{ secrets.GITHUB_TOKEN }} }
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Re-auth remote
         run: git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git
 
       - name: Setup Node
         uses: actions/setup-node@v4
-        with: { node-version: "20" }
+        with:
+          node-version: "20"
 
       - name: Install deps (docs/)
         run: |
@@ -66,5 +67,3 @@ jobs:
           else
             echo "Sin cambios en jugadores."
           fi
-
-          
