--- a/.github/workflows/lidom-players.yml
+++ b/.github/workflows/lidom-players.yml
@@ -52,8 +52,32 @@ jobs:
             LIDOM_STATS_URL=${{ env.LIDOM_STATS_URL }} node scripts/lidom_stats.mjs
           fi
 
+      # 👇 NUEVO: localizar el script de jugadores en rutas comunes
+      - name: Locate players script
+        id: findplayers
+        shell: bash
+        run: |
+          set -euo pipefail
+          CANDIDATES=(
+            "scripts/lidom_players.mjs"
+            "lidom_players.mjs"
+            "tools/lidom_players.mjs"
+            "src/scripts/lidom_players.mjs"
+          )
+          for p in "${CANDIDATES[@]}"; do
+            if [ -f "$p" ]; then
+              echo "Found $p"
+              echo "script=$p" >> "$GITHUB_OUTPUT"
+              exit 0
+            fi
+          done
+          echo "ERROR: lidom_players.mjs no encontrado en rutas conocidas." >&2
+          echo "Contenido (nivel 2) para depurar:" >&2
+          find . -maxdepth 2 -type f | sed 's|^\./||' | sort | head -n 200 >&2
+          exit 1
+
       - name: Scrape players
-        run: node scripts/lidom_players.mjs
+        run: node "${{ steps.findplayers.outputs.script }}"
 
       - name: Validate & commit
         run: |
