--- a/.github/workflows/lidom-players.yml
+++ b/.github/workflows/lidom-players.yml
@@ -45,17 +45,48 @@ jobs:
           fi
           [ -e node_modules ] || ln -s docs/node_modules node_modules
 
+      # Localiza lidom_stats.mjs para el fallback de líderes
+      - name: Locate stats script
+        id: findstats
+        shell: bash
+        run: |
+          set -euo pipefail
+          for p in scripts/lidom_stats.mjs lidom_stats.mjs tools/lidom_stats.mjs src/scripts/lidom_stats.mjs; do
+            if [ -f "$p" ]; then
+              echo "script=$p" >> "$GITHUB_OUTPUT"
+              exit 0
+            fi
+          done
+          echo "ERROR: lidom_stats.mjs no encontrado en rutas conocidas." >&2
+          find . -maxdepth 2 -type f | sed 's|^\./||' | sort | head -n 200 >&2
+          exit 1
+
       - name: Ensure leaders (optional, si quieres garantizarlo aquí)
         run: |
           if [ ! -f docs/stats/lideres.json ]; then
             echo "No existe docs/stats/lideres.json; ejecutando fallback..."
-            LIDOM_STATS_URL=${{ env.LIDOM_STATS_URL }} node scripts/lidom_stats.mjs
+            LIDOM_STATS_URL=${{ env.LIDOM_STATS_URL }} node "${{ steps.findstats.outputs.script }}"
           fi
 
-      - name: Scrape players
-        run: node scripts/lidom_players.mjs
+      # 👇 Localiza el script de jugadores automáticamente
+      - name: Locate players script
+        id: findplayers
+        shell: bash
+        run: |
+          set -euo pipefail
+          for p in scripts/lidom_players.mjs lidom_players.mjs tools/lidom_players.mjs src/scripts/lidom_players.mjs; do
+            if [ -f "$p" ]; then
+              echo "script=$p" >> "$GITHUB_OUTPUT"
+              exit 0
+            fi
+          done
+          echo "ERROR: lidom_players.mjs no encontrado en rutas conocidas." >&2
+          find . -maxdepth 2 -type f | sed 's|^\./||' | sort | head -n 200 >&2
+          exit 1
 
-      # ✅ NUEVO: configura identidad para poder commitear
+      - name: Scrape players
+        run: node "${{ steps.findplayers.outputs.script }}"
+
       - name: Configure git (author)
         run: |
           git config user.name  "github-actions[bot]"
